Update Styleguidist config

--- a/src/components/List/styleguide/Styleguide.scss
+++ b/src/components/List/styleguide/Styleguide.scss
@@ -1,4 +1,4 @@
-@import '~milligram/dist/milligram.css';
+@import '../../../../node_modules/milligram/dist/milligram.css';
 
 .listRow {
   align-items: center;
